# tauri_pqc

./: .augment-guidelines  CONFIG_SYSTEM_README.md  E2EE_INTEGRATION_README.md  SHADCN_SETUP.md  package-lock.json  package.json  tailwind.config.ts  test_mount.sh  test_webdav_connection.sh  test_zero_knowledge_upload.sh  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-go/: README.md  go.mod  main.go
src-go/handlers/: auth.go  blob.go  files.go  groups.go  messages.go
src-go/middleware/: cors.go
src-go/models/: file.go  group.go  user.go  utils.go
src-go/storage/: memory.go
src-go/utils/: response.go  validation.go
src-tauri/: Cargo.toml
src-tauri/migrations/: 001_create_auth_tables.sql
src-tauri/src/: commands.rs  e2ee_key_storage_test.rs  lib.rs
src-tauri/src/auth/: commands.rs  mod.rs  service.rs  tests.rs
src-tauri/src/commands/: crypto_tests.rs
src-tauri/src/config/: commands.rs  mod.rs
src-tauri/src/http/: client.rs
src-tauri/src/models/: README.md  auth.rs  config.rs  demo.rs  error.rs  file.rs  group.rs  mod.rs  user.rs  vault.rs  webdav.rs
src-tauri/src/store/: auth.rs  commands.rs  config.rs  encryption.rs  error.rs  memory.rs  mod.rs  sqlite.rs  tests.rs  traits.rs
src-tauri/src/tests/: auth_fix_verification.rs  e2ee_file_sharing_integration_test.rs  e2ee_integration_tests.rs  mod.rs
src-tauri/src/vault/: commands.rs  tests.rs
src-tauri/src/webdav/: commands.rs  encrypted_filesystem.rs  filesystem.rs  mod.rs  server.rs  tests.rs
src/components/: DebugFilePicker.tsx  E2EEDemo.tsx  E2EEGroupSharing.tsx  FilePathPicker.tsx  SettingsPanel.tsx  ShadcnDemo.tsx  SimpleFilePickerTest.tsx  VaultManager.tsx  VaultManagerWrapper.tsx
(+9 files in other folders)
