[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Storage and Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"
base64 = "0.22"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File system utilities
dirs = "5.0"

# Async utilities
async-trait = "0.1"

# WebDAV server
dav-server = "0.8"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
urlencoding = "2.1"
bytes = "1.0"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"

[dev-dependencies]
tempfile = "3.8"

